[package]
name = "ttl_cache_with_purging"
authors = ["Will-Low <26700668+Will-Low@users.noreply.github.com>"]
version = "0.2.0"
edition = "2021"
description = "A time-to-live (TTL) cache implementation with optional background purging for expired entries."
readme = "README.md"
homepage = "https://aembit.io/"
repository = "https://github.com/Aembit/ttl_cache_with_purging"
license = "MIT OR Apache-2.0"
keywords = ["ttl", "cache", "caching", "expire", "expiring"]
categories = ["caching", "asynchronous"]
exclude = [
    ".github",
    ".gitignore"
]

[badges]
maintenance = { status = "passively-maintained"}

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"]}

[dev-dependencies]
lazy_static = "1.4.0"